testsuite/tests/invalid_gpr/missing_addr/test.py
from testsuite_support.utils import run_tool

run_tool(['-P', 'spec.gpr'])
